merge fixes